test/fixtures/invalid/unclosed_if.blade.php
@if($user)
    <p>Welcome</p>
    <!-- Missing @endif -->
